# linver

./: CMakeLists.txt  main.h
linux_methods/: firmware_ver.c  firmware_ver.h  linclude.h  linuxver.c  linuxver.h
